2007-12-20  Lillian Angel  <langel@redhat.com>

	Fixes Bug #65
	* patches/icedtea-antialias.patch: Removed. Antialiasing works.
	* Makefile.am: Removed antialias patch.
	* Makefile.in: Regenerate.

2007-12-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added checks for ICEDTEA_HOME and SYSTEM_GCJ_DIR.
	* Makefile.in: Regenerate.

2007-12-19  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-version.patch: Added patch to change bug report url.
	* patches/icedtea-ecj.patch: Removed date from generated files.
	* generated/*: Updated files.

2007-12-18  Gary Benson  <gbenson@redhat.com>

	* contrib/templater/*: Wrap all PPC-specifics with conditionals.

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp:
	Regenerated from templater (whitespace changes only).
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/frame_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/registerMap_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/stubGenerator_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/stubRoutines_ppc.hpp: Likewise.
	* ports/hotspot/src/os_cpu/linux_ppc/vm/os_linux_ppc.cpp: Likewise.

2007-12-18  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/os_cpu/linux_ppc/vm/os_linux_ppc.cpp
	(_Copy_conjoint_jints_atomic): Invert conditionals for readability.
	(_Copy_conjoint_jints_atomic): Likewise.

2007-12-18  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/bytes_ppc.hpp
	(is_Java_byte_ordering_different): Add little endian support.
	(get_Java_u2, get_Java_u4, get_Java_u8): Likewise.
	(put_Java_u2, put_Java_u4, put_Java_u8): Likewise.

2007-12-18  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp
	(bang_stack_with_offset): Move function body from header.

2007-12-14  Lillian Angel  <langel@redhat.com>

	* configure.ac: Updated to version 1.5.
	* configure: Regenerate.
