@@ -1,3 +1,8 @@
+2007-12-21  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am: Took out invalid check for ICEDTEA_HOME.
+	* Makefile.in: Regenerate.
+
 2007-12-20  Lillian Angel  <langel@redhat.com>
 
 	Fixes Bug #65
